added trader with binance exchange
